// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderedInput.vue renders correctly with default props 1`] = `
<div class="input-container">
  <div class="label-container">
    <div class="label-container__main">
      <!---->
      <h3 class="label-container__main__label"></h3>
      <h3 class="label-container__main__label add-label"></h3>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <!----> <input id="" placeholder="default" type="text" class="headered-input" style="width: 100%; height: 48px;">
</div>
`;

exports[`HeaderedInput.vue renders correctly with input error 1`] = `
<div class="input-container">
  <div class="label-container">
    <div class="label-container__main">
      <erroricon-stub></erroricon-stub>
      <!---->
      <!---->
      <h3 class="label-container__main__error">testError</h3>
    </div>
    <!---->
  </div>
  <!---->
  <!----> <input id="" placeholder="default" type="text" class="headered-input" style="width: 100%; height: 48px;">
</div>
`;

exports[`HeaderedInput.vue renders correctly with isMultiline props 1`] = `
<div class="input-container">
  <div class="label-container">
    <div class="label-container__main">
      <!---->
      <h3 class="label-container__main__label"></h3>
      <h3 class="label-container__main__label add-label"></h3>
      <!---->
    </div>
    <!---->
  </div>
  <!----> <textarea id="" placeholder="default" rows="5" cols="40" wrap="hard" class="headered-textarea" style="width: 100%; height: 48px;"></textarea>
  <!---->
</div>
`;
